# nanoject-controller

./: README.md  pyproject.toml
firmware/nanoject_controller/: nanoject_controller.ino
src/nanoject_controller/: controller.py  gui.py
